# horse-race-gamble

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: a  bet_pool.cpp  bet_pool.h  bets.cpp  bets.h  config.h  core.cpp  core.h  display.cpp  display.h  game.cpp  game.h  horse.cpp  horse.h  horses.cpp  horses.h  input.cpp  input.h  main.cpp  my_random.h  player.cpp  player.h  race.cpp  race.h  rand_utils.cpp  rand_utils.h
